--- a/src/componenets/app.css
+++ b/src/componenets/app.css
@@ -6,5 +6,5 @@
 body{
      /* background-image: url("https://optinmonster.com/wp-content/uploads/2019/03/how-to-create-a-coming-soon-page-in-wordpress.png");
      background-size: cover; */
-     background-color: grey;
+     background-color: rgb(235, 235, 235);
 }
